--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
+    "bootstrap": "5.1.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "next",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.4",
