--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "next",
     "react-credit-cards": "^0.8.3",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.4",
